<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="person"
            type="com.example.domain.domain.Person" />

        <variable
            name="clickListener"
            type="com.example.secureroombase.ui.list.PersonAdapter.ItemClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintBottom_toTopOf="@+id/textView_age"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_display_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="start"
            android:text="@{person.name}"
            app:layout_constraintBottom_toBottomOf="@+id/textView_name"
            app:layout_constraintStart_toEndOf="@+id/textView_name"
            app:layout_constraintTop_toTopOf="@+id/textView_name" />

        <TextView
            android:id="@+id/textView_display_secondName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="start"
            android:text="@{person.secondName}"
            app:layout_constraintBottom_toBottomOf="@+id/textView_name"
            app:layout_constraintStart_toEndOf="@+id/textView_display_name"
            app:layout_constraintTop_toTopOf="@+id/textView_name" />

        <TextView
            android:id="@+id/textView_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/age_indicator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_name" />

        <TextView
            android:id="@+id/textView_display_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@{String.valueOf(person.age)}"
            app:layout_constraintBottom_toBottomOf="@+id/textView_age"
            app:layout_constraintStart_toEndOf="@+id/textView_age"
            app:layout_constraintTop_toTopOf="@+id/textView_age" />

        <ImageView
            android:id="@+id/imageButton_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/edit_button"
            android:onClick="@{()->clickListener.onUpdateClick(person.id)}"
            android:src="@drawable/ic_baseline_edit_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>